[tool.poetry]
name = "pyra2yr"
version = "0.0.0"
description = "Python interface for ra2yrproto"
authors = ["shmocz <112764837+shmocz@users.noreply.github.com>"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
aiohttp = "^3.9.1"
protobuf = "^4.25.1"
pyyaml = "^6.0.1"
coverage = "^7.4.0"
ra2yrproto = { url = "https://github.com/shmocz/ra2yrproto/releases/download/v1/ra2yrproto-1-py3-none-any.whl" }

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
pylint = "^3.0.3"
pylint-protobuf = "^0.22.0"
isort = "^5.13.2"
docformatter = "^1.7.5"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
